--- a/tv1.html
+++ b/tv1.html
@@ -29,9 +29,9 @@ if( navigator.userAgent.match(/android/i)
  || navigator.userAgent.match(/BlackBerry/i)
  || navigator.userAgent.match(/Windows Phone/i)
  ) {
-            var stream = "iptvid.my.id/avc/zdYwXLGjtNWsnDgSfgYmSlBCvPMO13kK/ztfsQn5V6MQUNR9NYB9gKdzahqiXrxXM/tlc.m3u8";
+            var stream = "qp-pldt-live-grp-02-prod.akamaized.net/out/u/tv5_hd.m3u8";
         }else{
-            var stream = "iptvid.my.id/avc/zdYwXLGjtNWsnDgSfgYmSlBCvPMO13kK/ztfsQn5V6MQUNR9NYB9gKdzahqiXrxXM/tlc.m3u8";
+            var stream = "qp-pldt-live-grp-02-prod.akamaized.net/out/u/tv5_hd.m3u8";
         }
   jwplayer("playerVh1hF1z5roh2").setup({
   "title": "Watch Live TV @Sohag Rana",
