--- a/tv1.html
+++ b/tv1.html
@@ -29,9 +29,9 @@ if( navigator.userAgent.match(/android/i)
  || navigator.userAgent.match(/BlackBerry/i)
  || navigator.userAgent.match(/Windows Phone/i)
  ) {
-            var stream = "qp-pldt-live-grp-02-prod.akamaized.net/out/u/tv5_hd.m3u8";
+            var stream = "https://cdn1.skygo.mn/live/disk1/Cartoon_Network/HLS-FTA/Cartoon_Network.m3u8";
         }else{
-            var stream = "qp-pldt-live-grp-02-prod.akamaized.net/out/u/tv5_hd.m3u8";
+            var stream = "https://cdn1.skygo.mn/live/disk1/Cartoon_Network/HLS-FTA/Cartoon_Network.m3u8";
         }
   jwplayer("playerVh1hF1z5roh2").setup({
   "title": "Watch Live TV @Sohag Rana",
