--- a/tv1.html
+++ b/tv1.html
@@ -19,7 +19,7 @@
 			}
 		</style>
 
-<div class="col-sm-offset-1"><div id="playerVh1hF1z5roh2"></div>
+<div class="col-sm-offset-4"><div id="playerVh1hF1z5roh2"></div>
 <script type="text/javascript">
 if( navigator.userAgent.match(/android/i)
  || navigator.userAgent.match(/webOS/i)
@@ -29,9 +29,9 @@ if( navigator.userAgent.match(/android/i)
  || navigator.userAgent.match(/BlackBerry/i)
  || navigator.userAgent.match(/Windows Phone/i)
  ) {
-            var stream = "https://cdn1.skygo.mn/live/disk1/Cartoon_Network/HLS-FTA/Cartoon_Network.m3u8";
+            var stream = "http://iptvid.my.id/avc/zdYwXLGjtNWsnDgSfgYmSlBCvPMO13kK/ztfsQn5V6MQUNR9NYB9gKdzahqiXrxXM/mykids.m3u8";
         }else{
-            var stream = "https://cdn1.skygo.mn/live/disk1/Cartoon_Network/HLS-FTA/Cartoon_Network.m3u8";
+            var stream = "http://iptvid.my.id/avc/zdYwXLGjtNWsnDgSfgYmSlBCvPMO13kK/ztfsQn5V6MQUNR9NYB9gKdzahqiXrxXM/mykids.m3u8";
         }
   jwplayer("playerVh1hF1z5roh2").setup({
   "title": "Watch Live TV @Sohag Rana",
