--- a/tv6.html
+++ b/tv6.html
@@ -29,9 +29,9 @@ if( navigator.userAgent.match(/android/i)
  || navigator.userAgent.match(/BlackBerry/i)
  || navigator.userAgent.match(/Windows Phone/i)
  ) {
-            var stream = "http://iptvid.my.id/avc/zdYwXLGjtNWsnDgSfgYmSlBCvPMO13kK/ztfsQn5V6MQUNR9NYB9gKdzahqiXrxXM/mykids.m3u8";
+            var stream = "https://ythls.armelin.one/channel/UCKL5hAuzgFQsyrsQKgU0Qng.m3u8";
         }else{
-            var stream = "http://iptvid.my.id/avc/zdYwXLGjtNWsnDgSfgYmSlBCvPMO13kK/ztfsQn5V6MQUNR9NYB9gKdzahqiXrxXM/mykids.m3u8";
+            var stream = "https://manifest.googlevideo.com/api/manifest/hls_variant/expire/1719383674/ei/GmJ7ZoqoG5yj1d8PuoaSwA0/ip/172.71.218.155/id/cre7FZnSHI0.1/source/yt_live_broadcast/requiressl/yes/xpc/EgVo2aDSNQ%3D%3D/hfr/1/ctier/SPL/playlist_duration/30/manifest_duration/30/maudio/1/gcr/hk/spc/UWF9f_eveii8lbsCC-SLK9fASzwvan9Q_exCThUTUmWQ-LjPOIgmmNl6D_wZG74/vprv/1/go/1/rqh/5/pacing/0/nvgoi/1/keepalive/yes/dover/11/itag/0/playlist_type/DVR/sparams/expire%2Cei%2Cip%2Cid%2Csource%2Crequiressl%2Cxpc%2Chfr%2Cctier%2Cplaylist_duration%2Cmanifest_duration%2Cmaudio%2Cgcr%2Cspc%2Cvprv%2Cgo%2Crqh%2Citag%2Cplaylist_type/sig/AJfQdSswRgIhAPo8Rg1ktTjGIANAEGsyPtOwW8z3H6TxAJLxt1q9wfcNAiEA3-R84FkC_WvAQtmTkFX2WRoFLvFaXiRJDXhfL1lE7MI%3D/file/index.m3u8";
         }
   jwplayer("playerVh1hF1z5roh2").setup({
   "title": "Watch Live TV @Sohag Rana",
