--- a/tv5.html
+++ b/tv5.html
@@ -29,9 +29,9 @@ if( navigator.userAgent.match(/android/i)
  || navigator.userAgent.match(/BlackBerry/i)
  || navigator.userAgent.match(/Windows Phone/i)
  ) {
-            var stream = "http://iptvid.my.id/avc/zdYwXLGjtNWsnDgSfgYmSlBCvPMO13kK/ztfsQn5V6MQUNR9NYB9gKdzahqiXrxXM/mykids.m3u8";
+            var stream = "user.scalecdn.co:8080/live/BK012ee1/993c950e60/567735.m3u8";
         }else{
-            var stream = "http://iptvid.my.id/avc/zdYwXLGjtNWsnDgSfgYmSlBCvPMO13kK/ztfsQn5V6MQUNR9NYB9gKdzahqiXrxXM/mykids.m3u8";
+            var stream = "user.scalecdn.co:8080/live/BK012ee1/993c950e60/567735.m3u8";
         }
   jwplayer("playerVh1hF1z5roh2").setup({
   "title": "Watch Live TV @Sohag Rana",
