--- a/tv3.html
+++ b/tv3.html
@@ -29,7 +29,7 @@ if( navigator.userAgent.match(/android/i)
  || navigator.userAgent.match(/BlackBerry/i)
  || navigator.userAgent.match(/Windows Phone/i)
  ) {
-            var stream = "https://qp-pldt-live-grp-02-prod.akamaized.net/out/u/tv5_qp.m3u8atnbd-8-org.stream/live-orgin/atnbd-8-org.stream/chunks.m3u8";
+            var stream = "https://qp-pldt-live-grp-02-prod.akamaized.net/out/u/tv5_qp.m3u8";
         }else{
             var stream = "https://qp-pldt-live-grp-02-prod.akamaized.net/out/u/tv5_qp.m3u8";
         }
