--- a/tv1.html
+++ b/tv1.html
@@ -29,9 +29,9 @@ if( navigator.userAgent.match(/android/i)
  || navigator.userAgent.match(/BlackBerry/i)
  || navigator.userAgent.match(/Windows Phone/i)
  ) {
-            var stream = "https://livecdn-iptv001.rumsport.com/stream/762/index.m3u8";
+            var stream = "https://www.youtube.com/live/cre7FZnSHI0?si=u7w_iIqd4MCnRw38";
         }else{
-            var stream = "https://livecdn-iptv001.rumsport.com/stream/762/index.m3u8";
+            var stream = "https://www.youtube.com/live/cre7FZnSHI0?si=u7w_iIqd4MCnRw38";
         }
   jwplayer("playerVh1hF1z5roh2").setup({
   "title": "Watch Live TV @Sohag Rana",
